err/python-rudp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Rudp'...
Compiling './lib/python3.5/site-packages/Rudp/Logging.py'...
***   File "./lib/python3.5/site-packages/Rudp/Logging.py", line 34
    print formatedMessage
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Rudp/Rudp.py'...
***   File "./lib/python3.5/site-packages/Rudp/Rudp.py", line 318
    print str(self) + " not ESTABLISHED, sending SYN"
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Rudp/examples'...
Compiling './lib/python3.5/site-packages/Rudp/examples/RudpReceiver.py'...
***   File "./lib/python3.5/site-packages/Rudp/examples/RudpReceiver.py", line 27
    print "Started Receiver on  " + str(self.rudpSocket.socket.getsockname())
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Rudp/examples/RudpSender.py'...
***   File "./lib/python3.5/site-packages/Rudp/examples/RudpSender.py", line 37
    print "Opened fileToSend DF:" + str(fileToSend.fileno()) + " name: " + str(self.fileName)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Rudp/test'...
Compiling './lib/python3.5/site-packages/Rudp/test/RudpSenderTest.py'...
***   File "./lib/python3.5/site-packages/Rudp/test/RudpSenderTest.py", line 17
    print str(extracted)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_rudp-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
